--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
     "formik": "^2.2.9",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-native": "^0.68.2",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -24,6 +24,8 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-search-list": "^3.0.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-vector-icons": "^9.1.0",
     "yup": "^0.32.11"
