--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'MusicApp'
+include ':react-native-music-files'
+project(':react-native-music-files').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-music-files/android')
+include ':react-native-music-files'
+project(':react-native-music-files').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-music-files/android')
 include ':react-native-linear-gradient'
 project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
 include ':react-native-linear-gradient'
