--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-firebase/app": "^15.0.0",
     "@react-native-firebase/auth": "^15.0.0",
     "@react-navigation/drawer": "^6.4.2",
@@ -30,6 +31,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.0.16",
+    "react-native-track-player": "^2.2.0-rc3",
     "react-native-vector-icons": "^9.1.0",
     "yup": "^0.32.11"
   },
