--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'MusicApp'
+include ':react-native-get-music-files'
+project(':react-native-get-music-files').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-get-music-files/android')
 include ':react-native-music-files'
 project(':react-native-music-files').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-music-files/android')
 include ':react-native-music-files'
