--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.1.0",
+    "@react-native-community/slider": "^4.2.4",
     "@react-native-firebase/app": "^15.0.0",
     "@react-native-firebase/auth": "^15.0.0",
     "@react-navigation/drawer": "^6.4.2",
