--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,8 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenLocal()
+        mavenCentral()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -41,14 +43,12 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-        mavenCentral {
-            // We don't want to fetch react-native from Maven Central as there are
-            // older versions over there.
-            content {
-                excludeGroup "com.facebook.react"
-            }
-        }
+
         google()
+        jcenter()
         maven { url 'https://www.jitpack.io' }
+
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
     }
 }
