--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@react-native-community/slider": "^4.2.4",
     "@react-native-firebase/app": "^15.0.0",
     "@react-native-firebase/auth": "^15.0.0",
+    "@react-native-firebase/firestore": "^15.0.0",
+    "@react-native-firebase/storage": "^15.0.0",
     "@react-navigation/drawer": "^6.4.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-native": "^0.68.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-image-crop-picker": "^0.35.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-raw-bottom-sheet": "^2.2.0",
@@ -30,11 +34,13 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-search-list": "^3.0.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-track-player": "^2.2.0-rc3",
     "react-native-vector-icons": "^9.1.0",
+    "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
