--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.1.0",
+    "@react-native-community/netinfo": "^9.3.0",
     "@react-native-community/slider": "^4.2.4",
     "@react-native-firebase/app": "^15.0.0",
     "@react-native-firebase/auth": "^15.0.0",
+    "@react-native-firebase/database": "^15.1.1",
     "@react-native-firebase/firestore": "^15.0.0",
     "@react-native-firebase/storage": "^15.0.0",
     "@react-navigation/drawer": "^6.4.2",
@@ -26,15 +28,17 @@
     "react-native": "^0.68.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-crop-picker": "^0.35.1",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-lightbox": "^0.8.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^13.0.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.9.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-search-list": "^3.0.1",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.0.16",
